[gd_scene load_steps=26 format=3 uid="uid://steavg1djh4"]

[ext_resource type="Script" uid="uid://b11q80cigqge3" path="res://scenes/ui/build_planner_container/build_planner_container.gd" id="1_6bc5j"]
[ext_resource type="PackedScene" uid="uid://4qjx8c3wfygx" path="res://scenes/ui/generic_label/generic_label.tscn" id="1_ay4ut"]
[ext_resource type="Shader" uid="uid://2iyv7xdg88rp" path="res://resources/shaders/global_colors.gdshader" id="2_6bc5j"]
[ext_resource type="PackedScene" uid="uid://b1ua27d8xdy1w" path="res://scenes/ui/generic_scroll_container/generic_scroll_container.tscn" id="3_a7hbx"]
[ext_resource type="Texture2D" uid="uid://cain1lwf4wicd" path="res://assets/textures/ui/small_panel_background.png" id="4_8pw40"]
[ext_resource type="PackedScene" uid="uid://deujwv1263fq4" path="res://scenes/ui/dynamic_slot_container/dynamic_slot_container.tscn" id="5_cq7he"]
[ext_resource type="PackedScene" uid="uid://cxq3bu12cwp8" path="res://scenes/ui/label_button/label_button.tscn" id="6_mc0ov"]
[ext_resource type="PackedScene" uid="uid://bxoncw32voayn" path="res://scenes/ui/generic_button/generic_button.tscn" id="7_p844p"]
[ext_resource type="Texture2D" uid="uid://c3xv2ige8n3rs" path="res://assets/textures/ui/horizontal_directional_arrow.png" id="8_c88u2"]
[ext_resource type="Texture2D" uid="uid://bvc7dfu5w84gq" path="res://assets/textures/ui/directional_arrow_outline.png" id="9_ank8l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i6d5u"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = true
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eqic6"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uijyj"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 0
shader_parameter/modulate = Color(0.705882, 0.12549, 0.270588, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = true
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cwikd"]
atlas = ExtResource("8_c88u2")
region = Rect2(0, 0, 6, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_uijyj"]
atlas = ExtResource("8_c88u2")
region = Rect2(0, 0, 6, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl3c0"]
atlas = ExtResource("8_c88u2")
region = Rect2(0, 0, 6, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm2rt"]
atlas = ExtResource("8_c88u2")
region = Rect2(0, 0, 6, 9)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jmxa2"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gfix2"]
atlas = ExtResource("9_ank8l")
region = Rect2(0, 0, 6, 9)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5qfpl"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qht37"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0v2m"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = true
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pxqwo"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = true
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_isin7"]
atlas = ExtResource("8_c88u2")
region = Rect2(6, 0, 6, 9)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7s7qy"]
resource_local_to_scene = true
shader = ExtResource("2_6bc5j")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[node name="BuildPlannerContainer" type="MarginContainer" node_paths=PackedStringArray("build_container", "delete_build_button", "selected_build_label", "last_page_button", "next_page_button")]
offset_right = 234.0
offset_bottom = 275.0
size_flags_horizontal = 3
theme_override_constants/margin_bottom = -41
script = ExtResource("1_6bc5j")
build_container = NodePath("VBoxContainer/VBoxContainer/BuildScrollContainer/MarginContainer/ScrollContainer/MarginContainer/DynamicSlotContainer")
delete_build_button = NodePath("VBoxContainer/VBoxContainer/Margin Container/MarginContainer/DeleteBuildButton")
selected_build_label = NodePath("VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/SelectedBuildLabel")
last_page_button = NodePath("VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton")
next_page_button = NodePath("VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
alignment = 1

[node name="GenericLabel" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_ay4ut")]
material = SubResource("ShaderMaterial_i6d5u")
layout_mode = 2
text = "Build Planner"
is_whole = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="BuildScrollContainer" parent="VBoxContainer/VBoxContainer" instance=ExtResource("3_a7hbx")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 5

[node name="GenericPanel" parent="VBoxContainer/VBoxContainer/BuildScrollContainer/MarginContainer" index="0"]
material = SubResource("ShaderMaterial_eqic6")
texture = ExtResource("4_8pw40")
region_rect = Rect2(0, 0, 5, 5)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/BuildScrollContainer/MarginContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="DynamicSlotContainer" parent="VBoxContainer/VBoxContainer/BuildScrollContainer/MarginContainer/ScrollContainer/MarginContainer" instance=ExtResource("5_cq7he")]
layout_mode = 2
size_flags_horizontal = 4
columns = 5
min_rows = 7

[node name="Margin Container" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/Margin Container"]
layout_mode = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="DeleteBuildButton" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer" instance=ExtResource("6_mc0ov")]
material = SubResource("ShaderMaterial_uijyj")
layout_mode = 2
size_flags_horizontal = 8
text = "DELETE"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="LastPageButton" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer" instance=ExtResource("7_p844p")]
layout_mode = 2
size_flags_vertical = 4
text = ""
disabled_texture = SubResource("AtlasTexture_cwikd")
pressed_texture = SubResource("AtlasTexture_uijyj")
default_texture = SubResource("AtlasTexture_gl3c0")
hover_texture = SubResource("AtlasTexture_xm2rt")

[node name="OutlineNinePatchRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton/OutlineMarginContainer" index="0"]
material = SubResource("ShaderMaterial_jmxa2")
texture = SubResource("AtlasTexture_gfix2")
patch_margin_left = 6
patch_margin_right = 6

[node name="NinePatchRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton" index="2"]
material = SubResource("ShaderMaterial_5qfpl")
custom_minimum_size = Vector2(0, 9)
texture = SubResource("AtlasTexture_gl3c0")
patch_margin_left = 6
patch_margin_right = 0

[node name="IconTextureRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton/NinePatchRect" index="0"]
visible = false
material = SubResource("ShaderMaterial_qht37")

[node name="MarginContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton" index="3"]
visible = false

[node name="HBoxContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton/MarginContainer" index="0"]
visible = false

[node name="MarginContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton/MarginContainer/HBoxContainer" index="0"]
visible = false

[node name="NameLabel" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton/MarginContainer/HBoxContainer" index="1"]
visible = false
material = SubResource("ShaderMaterial_s0v2m")
text = ""

[node name="SelectedBuildLabel" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer" instance=ExtResource("1_ay4ut")]
material = SubResource("ShaderMaterial_pxqwo")
layout_mode = 2
text = "BUILD 1"
horizontal_alignment = 1

[node name="NextPageButton" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer" instance=ExtResource("7_p844p")]
layout_mode = 2
size_flags_vertical = 4
text = ""
disabled_texture = SubResource("AtlasTexture_isin7")
pressed_texture = SubResource("AtlasTexture_isin7")
default_texture = SubResource("AtlasTexture_isin7")
hover_texture = SubResource("AtlasTexture_isin7")

[node name="OutlineNinePatchRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton/OutlineMarginContainer" index="0"]
material = SubResource("ShaderMaterial_jmxa2")
texture = SubResource("AtlasTexture_gfix2")
patch_margin_left = 6
patch_margin_right = 6

[node name="NinePatchRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton" index="2"]
material = SubResource("ShaderMaterial_7s7qy")
custom_minimum_size = Vector2(0, 9)
texture = SubResource("AtlasTexture_isin7")
patch_margin_left = 6
patch_margin_right = 0

[node name="IconTextureRect" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton/NinePatchRect" index="0"]
visible = false
material = SubResource("ShaderMaterial_qht37")

[node name="MarginContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton" index="3"]
visible = false

[node name="HBoxContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton/MarginContainer" index="0"]
visible = false

[node name="MarginContainer" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton/MarginContainer/HBoxContainer" index="0"]
visible = false

[node name="NameLabel" parent="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton/MarginContainer/HBoxContainer" index="1"]
visible = false
material = SubResource("ShaderMaterial_s0v2m")
text = ""

[editable path="VBoxContainer/VBoxContainer/BuildScrollContainer"]
[editable path="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/LastPageButton"]
[editable path="VBoxContainer/VBoxContainer/Margin Container/MarginContainer/HBoxContainer/NextPageButton"]
